test/elaboration/bad/coreml_invalid_type_application.mle
type ('a, 'b) pair = Pair of 'a * 'b
let (main : int pair) = Pair[int, int] (0, 0)